fix: alignment list members in discussion

--- a/discussions/static/discussions/css/discussion.css
+++ b/discussions/static/discussions/css/discussion.css
@@ -42,6 +42,7 @@
     padding: 10px 25px;
     width: 100%;
     border-bottom: 1px solid #1382D0;
+    display: flex;
 }
 .discussion__item p {
     color: #30668C;
